--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
